--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -349,4 +349,6 @@
     <color name="color_DAE7F6">#DAE7F6</color>
     <color name="color_E23434">#E23434</color>
     <color name="color_C9CFD7">#C9CFD7</color>
+    <color name="color_414655">#414655</color>
+    <color name="color_025BE8">#025BE8</color>
 </resources>
