--- a/app/src/main/res/layout/activity_info_center.xml
+++ b/app/src/main/res/layout/activity_info_center.xml
@@ -19,50 +19,7 @@
         app:firstTabText="@string/inbox"
         app:secondTabText="@string/unread_letters"/>
 
-    <LinearLayout
-        android:id="@+id/ll_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/color_262626_edf4ff"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:padding="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/custom_tab_layout">
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1.2"
-            android:gravity="center"
-            android:maxLines="1"
-            android:text="@string/index"
-            android:textColor="@color/color_BBBBBB_333333"
-            android:textSize="@dimen/textSize12sp"
-            app:autoSizeMaxTextSize="@dimen/textSize12sp"
-            app:autoSizeMinTextSize="8dp"
-            app:autoSizeTextType="uniform" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="3.5"
-            android:gravity="center"
-            android:text="@string/title"
-            android:textColor="@color/color_BBBBBB_333333"
-            android:textSize="@dimen/textSize12sp" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:gravity="center"
-            android:text="@string/record_time"
-            android:textColor="@color/color_BBBBBB_333333"
-            android:textSize="@dimen/textSize12sp" />
-
-    </LinearLayout>
 
     <com.scwang.smart.refresh.layout.SmartRefreshLayout
         android:layout_width="match_parent"
@@ -70,7 +27,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ll_title"
+        app:layout_constraintTop_toBottomOf="@+id/custom_tab_layout"
         app:srlDragRate="0.3"
         app:srlEnableLoadMore="true"
         app:srlEnablePureScrollMode="true">
