--- a/app/src/main/res/layout/activity_money_recharge.xml
+++ b/app/src/main/res/layout/activity_money_recharge.xml
@@ -45,15 +45,15 @@
                         android:id="@+id/rv_pay_type"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:paddingHorizontal="14dp"
                         android:paddingVertical="10dp"
+                        android:layout_marginEnd="@dimen/margin_14"
                         android:clipToPadding="false"
                         android:overScrollMode="never"
                         android:visibility="gone"
                         tools:itemCount="5"
                         tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                         tools:listitem="@layout/content_money_pay_type_rv"
-                        tools:spanCount="2"
+                        tools:spanCount="4"
                         tools:visibility="visible" />
 
                     <FrameLayout
