--- a/app/src/main/res/layout/activity_profile_center.xml
+++ b/app/src/main/res/layout/activity_profile_center.xml
@@ -55,14 +55,32 @@
                                     android:src="@drawable/ic_icon_menu" />
 
 
-                                <ImageView
-                                    android:id="@+id/iv_notice"
+                                <RelativeLayout
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginStart="16dp"
                                     android:layout_marginEnd="19dp"
-                                    android:layout_toLeftOf="@+id/iv_customer_service"
-                                    android:src="@drawable/ic_icon_massage02" />
+                                    android:layout_toLeftOf="@+id/iv_customer_service">
+
+
+                                    <ImageView
+                                        android:id="@+id/iv_notice"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginStart="16dp"
+                                        android:layout_marginEnd="-8dp"
+                                        android:layout_centerInParent="true"
+                                        android:src="@drawable/ic_icon_massage02" />
+
+                                    <ImageView
+                                        android:id="@+id/iv_circle"
+                                        android:layout_width="10dp"
+                                        android:layout_height="10dp"
+                                        android:layout_toEndOf="@+id/iv_notice"
+                                        android:src="@drawable/shape_red_circle" />
+
+
+                                </RelativeLayout>
+
 
                                 <ImageView
                                     android:id="@+id/iv_customer_service"
@@ -167,11 +185,15 @@
                                     app:layout_constraintTop_toTopOf="parent" />
 
                                 <ImageView
+                                    android:id="@+id/iv_profile"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_alignParentRight="true"
                                     android:layout_centerInParent="true"
                                     android:layout_marginEnd="@dimen/margin_30"
+                                    android:paddingStart="@dimen/margin_10"
+                                    android:paddingTop="@dimen/margin_10"
+                                    android:paddingBottom="@dimen/margin_10"
                                     android:src="@drawable/ic_icon_arrow06" />
 
                             </RelativeLayout>
@@ -844,7 +866,8 @@
                                     android:background="@null"
                                     android:gravity="center"
                                     android:minHeight="48dp"
-                                    android:orientation="horizontal">
+                                    android:orientation="horizontal"
+                                    android:visibility="gone">
 
                                     <ImageView
                                         android:layout_width="wrap_content"
@@ -1224,7 +1247,7 @@
                             android:background="@drawable/bg_white_8_block"
                             android:orientation="vertical"
                             android:padding="@dimen/margin_10"
-                            android:visibility="gone">
+                          >
 
                             <TextView
                                 android:layout_width="wrap_content"
