--- a/app/src/main/res/layout/content_infocenter_list.xml
+++ b/app/src/main/res/layout/content_infocenter_list.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:background="@color/color_191919_FCFCFC"
+    android:orientation="vertical"
     tools:context=".ui.infoCenter.InfoCenterAdapter">
 
     <LinearLayout
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingStart="8dp"
+        android:paddingStart="14dp"
         android:paddingTop="12dp"
         android:paddingEnd="8dp"
         android:paddingBottom="12dp"
@@ -24,41 +24,52 @@
 
         <TextView
             android:id="@+id/txv_index"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1.2"
+            android:background="@drawable/ic_ellipse_28"
             android:gravity="center"
-            android:textColor="@color/color_BBBBBB_333333"
+            android:textColor="@color/color_6C7BA8"
             android:textSize="@dimen/textSize12sp"
             tools:text="1" />
 
-        <TextView
-            android:id="@+id/txv_title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="3.5"
-            android:gravity="center"
-            android:maxLines="1"
-            android:ellipsize="end"
-            android:textColor="@color/color_BBBBBB_333333"
-            android:textSize="@dimen/textSize12sp"
-            tools:text="工商银行停用通知" />
 
-        <TextView
-            android:id="@+id/txv_time"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:gravity="center"
-            android:textColor="@color/color_BBBBBB_333333"
-            android:textSize="@dimen/textSize12sp"
-            tools:text="2019-01-01 12:00:00" />
+            android:layout_marginStart="@dimen/margin_12"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/txv_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:gravity="center"
+                android:maxLines="1"
+                android:textColor="@color/color_535D76"
+                android:textSize="@dimen/textSize12sp"
+                tools:text="工商银行停用通知" />
+
+            <TextView
+                android:id="@+id/txv_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="@color/color_A7B2C"
+                android:textSize="@dimen/textSize12sp"
+                tools:text="2019-01-01 12:00:00" />
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/color_1F1F1F_E2E2E2" />
+        android:layout_marginStart="@dimen/margin_14"
+        android:layout_marginEnd="@dimen/margin_8"
+        android:background="@color/color_E3E8EE" />
+
 
 </LinearLayout>
